@@ -314,6 +314,8 @@ L["ICONMENU_REACT"] = "Unit Reaction"
 L["ICONMENU_FRIEND"] = "Friendly"
 L["ICONMENU_HOSTILE"] = "Hostile"
 
+L["ICONMENU_ISPLAYER"] = "Unit Is Player"
+
 L["ICONMENU_ICDTYPE"] = "Triggered by"
 L["ICONMENU_SPELLCAST_COMPLETE"] = "Spell Cast Finish/Instant Cast"
 L["ICONMENU_SPELLCAST_START"] = "Spell Cast Start"
