@@ -30,7 +30,7 @@ local DogTag = LibStub("LibDogTag-3.0", true)
 TELLMEWHEN_VERSION = "6.0.3"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 60334 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 60335 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 61001 or TELLMEWHEN_VERSIONNUMBER < 60000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXROWS = 20
@@ -50,8 +50,8 @@ local GetActiveTalentGroup, GetPrimaryTalentTree, GetNumTalentTabs, GetNumTalent
       GetActiveTalentGroup, GetPrimaryTalentTree, GetNumTalentTabs, GetNumTalents, GetTalentInfo
 local UnitPower, UnitClass, UnitGUID, UnitName, UnitInBattleground, UnitInRaid, UnitExists =
       UnitPower, UnitClass, UnitGUID, UnitName, UnitInBattleground, UnitInRaid, UnitExists
-local GetPartyAssignment, InCombatLockdown, IsInGuild =
-      GetPartyAssignment, InCombatLockdown, IsInGuild
+local GetPartyAssignment, IsInGuild =
+      GetPartyAssignment, IsInGuild
 local GetNumBattlefieldScores, GetBattlefieldScore =
       GetNumBattlefieldScores, GetBattlefieldScore
 local GetCursorPosition, GetAddOnInfo, IsAddOnLoaded, LoadAddOn, EnableAddOn =
@@ -2843,14 +2843,12 @@ function TMW:PLAYER_LOGIN()
 	
 	-- Yeah,  I do it twice. Masque is a heap of broken shit and doesn't work unless its done twice.
 	TMW:Update()
-	TMW:Update()
+	--TMW:Update()
 end
 
 
 function TMW:PLAYER_SPECIALIZATION_CHANGED()
-	if not InCombatLockdown() then
-		TMW:ScheduleUpdate(.2)
-	end
+	TMW:ScheduleUpdate(.2)
 	--TMW:Update()
 	
 	if not TMW.AddedTalentsToTextures then
